fix(a11y): Contrastes des textes > 4.5:1. RGAA 3.2

--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,10 @@ body {
     position:sticky; top: 0; margin: 0; padding-top: 5px; background: white; z-index: 102;
 }
 #header h1 {
-    display: inline-block; white-space: nowrap; margin-top: 18px; top: 0;position: fixed; left: 50%; transform: translate(-50%,-50%) !important; font-weight: normal; text-align: center; color: grey; font-size: 14px; font-family: monospace; text-transform: uppercase;
+    display: inline-block; white-space: nowrap; margin-top: 18px; top: 0;position: fixed; left: 50%; transform: translate(-50%,-50%) !important; font-weight: normal; text-align: center; color: #767676; font-size: 14px; font-family: monospace; text-transform: uppercase;
 }
-#header h1 a{
-    text-decoration: none; color: grey;
+#header h1 a {
+    text-decoration: none; color: #767676;
 }
 #header #nav_mode {
     display: inline-block;
@@ -24,7 +24,7 @@ body {
 #header #nav_mode a {
     font-size: 14px;
     text-transform: uppercase;
-    color: grey;
+    color: #767676;
     font-family: monospace;
     text-decoration: none;
 }
@@ -34,6 +34,8 @@ body {
 }
 #header a#lien_infos {
     position:fixed; left: 10px; top: 11px; display: inline-block; color: grey; text-decoration: none; font-family: monospace;
+    font-size: 10px;
+    position:fixed; left: 10px; top: 11px; display: inline-block; color: #767676; text-decoration: none; font-family: monospace;
     font-size: 10px;
     border-radius: 99px;
     border: 1px solid grey;
@@ -89,7 +91,7 @@ body {
 .ih {
     float:left;
     height: 14px;
-    color: grey;
+    color: #767676;
     width: 66px;
     position:relative;
     margin-bottom: 5px;
@@ -121,7 +123,6 @@ body {
 
 #legende {
     margin-top: 0;
-    color: #aeaeae;
 }
 
 #legende span {
@@ -131,16 +132,15 @@ body {
 }
 
 #footer, #legende {
-    font-family: monospace; font-size: 13px; text-align: center;
+    font-family: monospace; font-size: 13px; color: #767676; text-align: center;
 }
 
 #footer a {
-    color: #aeaeae;
+    color: #767676;
 }
 
 #footer {
     margin-top: 30px;
-    color: #aeaeae;
 }
 
 @media screen and (min-width: 1200px) {
@@ -160,6 +160,7 @@ body {
         display: none;
     }
 }
+
 /* Classes utilitaires */
 .visually-hidden {
     overflow: hidden !important;
